--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ notifications:
     on_success: never
     on_failure: always
 
+before_install:
+  - go get github.com/mattn/goveralls
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
